--- a/ariExpressDjango/mainApp/templates/inbox.html
+++ b/ariExpressDjango/mainApp/templates/inbox.html
@@ -7,12 +7,14 @@
 <html>
 <body>
 	<main>
+		<br>
 		<h1>Inbox</h1>
+		<br><br>
 		<!--Table of messages-->
 		<div class = "col-lg-12 hide">
 			<div style = "margin-top: 20 px;">
-				<table class = "table table-sm" >
-					<thead class = "table secondary">
+				<table class="table table-hover" >
+					<thead class="table-light" style="font-size: 20px">
 						<tr>
 							<th style = "width: 20%;">Name</th>
 							<th style = "width: 50%;">Subject</th>
@@ -22,7 +24,7 @@
 						</tr>
 					</thead>
 					{% for usermessage in usermessages %}
-					<tr style="background-color:#f3f8ff;"> 
+					<tr> 
 						<td>{{ usermessage.sender }}</td>
 						<td>{{ usermessage.subject }}</td>
 						<td>{{ usermessage.creation_date | date:'m/d/y (H:i)' }}</td>
